--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^4.4.2",
+    "@openzeppelin/contracts": "^4.5.0-rc.0",
     "solc": "^0.8.0",
     "truffle": "^5.1.16-truffleLogger.0"
   }
