--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
-  "dependencies": {
+  "name": "anon-ft",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "ganache": "ganache -g 0 -p 8545",
+    "web": "node app.js",
+    "start": "npm-run-all -p ganache web"
+  },
+  "devDependencies": {
     "@openzeppelin/contracts": "^4.5.0-rc.0",
+    "ganache": "^7.1.0",
     "solc": "^0.8.0",
     "truffle": "^5.1.16-truffleLogger.0"
+  },
+  "dependencies": {
+    "ethjs": "^0.4.0",
+    "typescript": "^4.6.4",
+    "web3": "^1.7.3"
   }
 }
